--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,12 +1,19 @@
-@main("Dashboard") {
+@(mieterCount: java.lang.Integer, mietSum: java.lang.Integer, investitionsCount: java.lang.Integer, investitionsSum: java.lang.Integer)
 
+@main("Dashboard") {
     <div class="panel panel-default">
         <div class="panel-heading"><h2>Dashboard</h2></div>
 
         <div class="panel-body">
-            <div class="alert alert-success"><strong>Alle Mieten pünktlich</strong>
-                12 Mieter: 12222€ monatliche Einnahmen</div>
-            <div class="alert alert-warning"><strong>3 Investitionen im nächsten Monat</strong> insgesammt 25000€</div>
+            @if(mieterCount > 0) {
+                <div class="alert alert-success"><strong>Alle Mieten pünktlich</strong>
+                    @mieterCount Mieter: @(mietSum)€ monatliche Einnahmen</div>
+            }
+
+            @if(investitionsCount > 0) {
+                <div class="alert alert-warning"><strong>@investitionsCount Investitionen im nächsten Monat</strong>
+                    insgesammt @(investitionsSum)€</div>
+            }
         </div>
     </div>
 }
