--- a/app/views/immobilien.scala.html
+++ b/app/views/immobilien.scala.html
@@ -64,7 +64,7 @@
                                   bezierCurve: false,
                                   scaleOverride: true,
                                   scaleSteps: @immobilie.getScaleSteps(),
-                                  scaleStepWidth: 100,
+                                  scaleStepWidth: @immobilie.getScale(),
                                   scaleStartValue: 0
                                 }
 
