--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -49,7 +49,7 @@
                                   bezierCurve: false,
                                   scaleOverride: true,
                                   scaleSteps: @{controllers.helpers.wertHelper.getScaleSteps()},
-                                  scaleStepWidth: 100,
+                                  scaleStepWidth: @{controllers.helpers.wertHelper.getScale()},
                                   scaleStartValue: 0
                                 }
 
