--- a/app/views/showImmo.scala.html
+++ b/app/views/showImmo.scala.html
@@ -61,7 +61,7 @@
                                   bezierCurve: false,
                                   scaleOverride: true,
                                   scaleSteps: @immo.getScaleSteps(),
-                                  scaleStepWidth: 100,
+                                  scaleStepWidth: @immo.getScale(),
                                   scaleStartValue: 0
                                 }
 
