Investition in Chart

--- a/app/views/showImmo.scala.html
+++ b/app/views/showImmo.scala.html
@@ -46,12 +46,19 @@
                                     pointStrokeColor: "rgba(0,178,0,1)",
                                     data: [@immo.calculateWert(1348956000000L),@immo.calculateWert(1356908400000L),@immo.calculateWert(1364684400000L),@immo.calculateWert(1372543200000L),@immo.calculateWert(1380492000000L),@immo.calculateWert(1388444400000L),@immo.calculateWert(1396216800000L),@immo.calculateWert(1404079200000L),@immo.calculateWert(1412028000000L),@immo.calculateWert(1419980400000L),@immo.calculateWert(1427752800000L)]
                                   },{
+                                    fillColor: "rgba(178,178,0,.1)",
+                                    strokeColor: "rgba(178,178,0,1)",
+                                    pointColor: "#ffff00",
+                                    pointStrokeColor: "rgba(178,178,0,1)",
+                                    data: [@immo.getInvestitionAt(1348956000000L),@immo.getInvestitionAt(1356908400000L),@immo.getInvestitionAt(1364684400000L),@immo.getInvestitionAt(1372543200000L),@immo.getInvestitionAt(1380492000000L),@immo.getInvestitionAt(1388444400000L),@immo.getInvestitionAt(1396216800000L),@immo.getInvestitionAt(1404079200000L),@immo.getInvestitionAt(1412028000000L),@immo.getInvestitionAt(1419980400000L),@immo.getInvestitionAt(1427752800000L)]
+                                  } ,{
                                     fillColor: "rgba(178,0,0,.1)",
                                     strokeColor: "rgba(178,0,0,1)",
                                     pointColor: "#ff0000",
                                     pointStrokeColor: "rgba(178,0,0,1)",
                                     data: [@immo.getKreditAt(1348956000000L),@immo.getKreditAt(1356908400000L),@immo.getKreditAt(1364684400000L),@immo.getKreditAt(1372543200000L),@immo.getKreditAt(1380492000000L),@immo.getKreditAt(1388444400000L),@immo.getKreditAt(1396216800000L),@immo.getKreditAt(1404079200000L),@immo.getKreditAt(1412028000000L),@immo.getKreditAt(1419980400000L),@immo.getKreditAt(1427752800000L)]
-                                  }]
+                                  }
+                                  ]
                                 }
 
                                 var options1 = {
