--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -34,6 +34,12 @@
                                     pointStrokeColor: "rgba(0,178,0,1)",
                                     data: [@{controllers.helpers.wertHelper.calculateAllWert(1348956000000L)},@{controllers.helpers.wertHelper.calculateAllWert(1356908400000L)},@{controllers.helpers.wertHelper.calculateAllWert(1364684400000L)},@{controllers.helpers.wertHelper.calculateAllWert(1372543200000L)},@{controllers.helpers.wertHelper.calculateAllWert(1380492000000L)},@{controllers.helpers.wertHelper.calculateAllWert(1388444400000L)},@{controllers.helpers.wertHelper.calculateAllWert(1396216800000L)},@{controllers.helpers.wertHelper.calculateAllWert(1404079200000L)},@{controllers.helpers.wertHelper.calculateAllWert(1412028000000L)},@{controllers.helpers.wertHelper.calculateAllWert(1419980400000L)},@{controllers.helpers.wertHelper.calculateAllWert(1427752800000L)}]
                                   },{
+                                    fillColor: "rgba(178,178,0,.1)",
+                                    strokeColor: "rgba(178,178,0,1)",
+                                    pointColor: "#ffff00",
+                                    pointStrokeColor: "rgba(178,178,0,1)",
+                                    data: [@{controllers.helpers.wertHelper.getAllInvestitionAt(1348956000000L)},@{controllers.helpers.wertHelper.getAllInvestitionAt(1356908400000L)},@{controllers.helpers.wertHelper.getAllInvestitionAt(1364684400000L)},@{controllers.helpers.wertHelper.getAllInvestitionAt(1372543200000L)},@{controllers.helpers.wertHelper.getAllInvestitionAt(1380492000000L)},@{controllers.helpers.wertHelper.getAllInvestitionAt(1388444400000L)},@{controllers.helpers.wertHelper.getAllInvestitionAt(1396216800000L)},@{controllers.helpers.wertHelper.getAllInvestitionAt(1404079200000L)},@{controllers.helpers.wertHelper.getAllInvestitionAt(1412028000000L)},@{controllers.helpers.wertHelper.getAllInvestitionAt(1419980400000L)},@{controllers.helpers.wertHelper.getAllInvestitionAt(1427752800000L)}]
+                                  },{
                                     fillColor: "rgba(178,0,0,.1)",
                                     strokeColor: "rgba(178,0,0,1)",
                                     pointColor: "#ff0000",
