--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -29,7 +29,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="@controllers.routes.Application.dashboard()"><i class="glyphicon glyphicon-home"></i>
-                        -Tracker</a>
+                        -Dash</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
