--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -61,6 +61,14 @@
 
                                 new Chart(c1.getContext("2d")).Line(data1, options1)
                             </script>
+            <div style="margin-top: 15px">
+
+                <div class="alert alert-success alert-heading" role="alert"><strong>Kaufpreis</strong>
+                    (inkl Wertsteigerung)</div>
+                <div class="alert alert-warning alert-heading" role="alert"><strong>Investitionen</strong> in Immobilie</div>
+                <div class="alert alert-danger alert-heading" role="alert"><strong>Kredite</strong>
+                    summiert</div>
+            </div>
         </div>
     </div>
 }
