--- a/app/views/showImmo.scala.html
+++ b/app/views/showImmo.scala.html
@@ -19,13 +19,11 @@
                     <div class="tab-content">
                         <div class="tab-pane fade in active" id="dashboard">
 
-                            <div style="margin-top: 15px">
-                                <div class="alert alert-info alert-heading" role="alert"><strong>Gesamtwert</strong></div>
-                                <div class="alert alert-success alert-heading" role="alert"><strong>Kaufpreis</strong>
-                                    (inkl Wertsteigerung)</div>
-                                <div class="alert alert-danger alert-heading" role="alert"><strong>Kredite</strong>
-                                    summiert</div>
-                            </div>
+                            <div class="alert alert-success alert-heading" role="alert"><strong>Kaufpreis</strong>
+                                (inkl Wertsteigerung)</div>
+                            <div class="alert alert-warning alert-heading" role="alert"><strong>Investitionen</strong> in Immobilie</div>
+                            <div class="alert alert-danger alert-heading" role="alert"><strong>Kredite</strong>
+                                summiert</div>
 
                             <div class="chart_big" id="parent">
                                 <canvas id="chartid"></canvas>
