--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -65,6 +65,18 @@ body {
   display: inline-block;
 }
 
+.logo-border {
+  border-radius: 5px;
+  border: 2px solid #d6e9c6;
+  background-color: #dff0d8;
+  padding-top: 12px;
+  margin: 3px;
+}
+
+.navbar-nav{
+  padding-left: 20px;
+  padding-top: 3px;
+}
 /*** PANEL INFO ***/
 
 .panel.with-nav-tabs .panel-heading {
