--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -28,8 +28,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="@controllers.routes.Application.dashboard()"><i class="glyphicon glyphicon-home"></i>
-                        -Dash</a>
+                        <a class="navbar-brand logo-border" href="@controllers.routes.Application.dashboard()"><i class="glyphicon glyphicon-home"></i>
+                            -Dash</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
