--- a/app/views/intro.scala.html
+++ b/app/views/intro.scala.html
@@ -1,9 +1,9 @@
 @main("Über uns") {
 
     <div class="jumbotron">
-<h1>Immo Tracker</h1>
+<h1>Immo Dash</h1>
 
-    <p><b>Immo-Investoren:</b> Chancen und Risiken Ihrer Invests im Blick:</p>
+    <p><b>Immo-Dash:</b> Chancen und Risiken Ihrer Invests im Blick:</p>
 <p>
     <li>Automatische Bewertung aller Immo-Invests durch diverse Datenbanke, Ereignisse etc.(Verkäufe in der Region, Immoscout-Preise, Presse...)</li>
     <li> Mietzahlungen automatisch überwachen</li>
